<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".android.activities.AdbWiFiActivity">


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tv_top_text"
    android:text="@string/top_text"
    android:paddingTop="25dp"
    android:paddingBottom="40dp"
    android:layout_centerHorizontal="true"
    />

    <com.gxh.adbwifi.android.views.IconFontView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_button"
        android:text="@string/button_wifi_off"
        android:textSize="110dp"

        android:layout_below="@+id/tv_top_text"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_footer1"
        android:layout_below="@id/iv_button"
        android:paddingTop="40dip"
        android:layout_centerHorizontal="true"
        android:text="@string/footer_text_1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_footer2"
        android:layout_below="@id/tv_footer1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/footer_text_2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_footer3"
        android:layout_below="@id/tv_footer2"
        android:layout_centerHorizontal="true"
        android:text="@string/footer_text_3"

        />

</RelativeLayout>
